--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Local .terraform directories
 **/.terraform/*
+.terraform
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+*.tfstate.backup
+
 
 # Crash log files
 crash.log
